--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -1,4 +1,25 @@
 body {
-  font-size: 16px;
-  color: aqua;
+  font-size: 14px;
+}
+
+.wrapper-v1 {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+ul {
+  list-style: none;
+}
+.relative {
+  position: relative;
+}
+.mod-bg {
+  background: url(../img/banner_Bg.webp) 50% 0 repeat-x;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
 }
