--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -1,16 +1,33 @@
+body,
+html,
 h1,
 h2,
-body {
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+li,
+dl,
+dt,
+dd,
+header,
+menu,
+section,
+p,
+input,
+td,
+th,
+ins {
   padding: 0;
   margin: 0;
 }
 a {
   text-decoration: none;
-  color: #333;
+  color: #000;
+  cursor: pointer;
 }
 img {
   vertical-align: baseline;
-}
-.App {
-  color: red;
 }
