--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -27,6 +27,9 @@ a {
   text-decoration: none;
   color: #000;
   cursor: pointer;
+  &:hover {
+    color: #31c27c;
+  }
 }
 img {
   vertical-align: baseline;
